Most Bugfixes are not included in this changelog. See github:
https://github.com/resident-uhlig/chrome-hyperiums7/issues

XXXX-XX-XX XX:XX:XX Version X.X.X
* Added datatables to "per player" / "more details" fleets table
* Added live timeline at the bottom of all pages (hover ticks to show)
* Added stats for credits on sale

2014-10-21 16:21:00 Version 0.6.1
* Fixed unknown HAPI data "counterinfiltr"

2014-06-04 15:36:00 Version 0.6.0
* Added fleet spread sheet
* Added tech level suggestion to fleet calculator
* Changed default production type to techno and government type to dictatorial in fleet calculator
* Added N/A table on single fleet page

2014-04-08 20:20:00 Version 0.5.0
* Added link to Beka's hyperiums tools for planet history on Trading map
* Added link to Beka's hyperiums tools for player history on Ranking page
* Added population size for each planet on global exploitations manager

2014-01-16 21:35:00 Version 0.4.0
* Added total upkeep for trading relations, factories, infiltrations and counter-infiltrations on cash page
* Added planet update tick

2013-12-29 14:30:00 Version 0.3.0
* Added map on trading map page
* Added AvgP for leaving fleet messages
* Added Overview of Army Capacity, Carried Armies and Ground Armies on military page

2013-12-21 20:06:00 Version 0.2.0
* Added link to forum on "last 20 messages" page (for alliances)
* Added sum of Ground AvgP generation to controlled planets summary
* Added notification for install or update of extension
* Added button to drop/enable stasis on military page

2013-12-12 20:25:00 Version 0.1.1
* Bug fixes only

2013-12-12 19:56:00 Version 0.1.0
* Added information about deployed fleets
* Added coordinates to moving fleets
* Added separate link for going to last page of thread
* Added count and display number of backup buddy logins
* Added sum of GA generation to controlled planets summary

2013-11-29 15:44:00 Version 0.0.6
* Added Cache Overview
* Added Update cache with browsing content