@@ -33,6 +33,7 @@ A Chrome extension with tools and improvements for Hyperiums 7 (unofficial)
 - Overview of Space and Ground AvgP by N/A
 - Filter and Sort function for "more details" on planet's military page
 - Add planet to group (use "Define/Extend" to confirm & save)
+- Check all by ETA on "Sort by ETA" for moving fleets
 
 #### Trading
 - One input for all planets in Global exploitations manager
